[package]
name = "auth_webview"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tauri = "1.1.1"
wry = "0.21.1"
# futures = "0.3"
xal = { path = "../xal" }
# tokio = { version = "1.21.2", features = ["full"] }
