[package]
name = "client_webrtc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
webrtc = "0.5.1"
lazy_static = "1.4"
anyhow = "1.0"
xal = { path = "../xal" }
gamestreaming_webrtc = { path = "../gamestreaming_webrtc" }