[package]
name = "gamestreaming"
version = "0.1.0"
authors = ["tuxuser <462620+tuxuser@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
correlation_vector = { git = "https://github.com/tuxuser/CorrelationVector-Rust.git", branch = "master" }
uuid = { version = "0.8.1", features = ["v4"] }
xal = { path = "../xal" }
webrtc-rs-srtp = { git = "https://github.com/Cicuma/srtp.git", branch = "main" }
webrtc-rs-stun = "0.1.13"
webrtc-rs-rtp = "0.1.0"
