[package]
name = "gamestreaming_native"
version = "0.1.0"
authors = ["tuxuser <462620+tuxuser@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
hexdump = "0.1.1"
uuid = { version = "1.2", features = ["v4"] }
pnet = "0.31.0"
webrtc = "0.5.1"
xal = { path = "../xal" }
teredo = { path = "../teredo" }
byteorder = "1.4.3"
bitflags = "1.3.2"
pbkdf2 = { version = "0.11.0", default-features = false }
hex = "0.4.3"
sha2 = "0.10.6"
hmac = "0.12.1"

# common for bins
structopt = { version = "0.3.26", optional = true }

# pcap_parser
pcap = { version = "0.11.0", optional = true }

[features]
pcap = ["dep:pcap", "dep:structopt"]

[[bin]]
name = "pcap_parser"
required-features = ["pcap"]