[package]
name = "gamestreaming_webrtc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deku = "0.14.1"
tokio = { version = "1", features = ["full"]}
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.37"
chrono = "0.4.22"

[dev-dependencies]
xal = { path = "../xal" }

[[example]]
name = "gssv-api"
path = "examples/gssv_api.rs"
