[package]
name = "gamestreaming_webrtc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deku = "0.14.1"
tokio = { version = "1", features = ["full"]}
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.37"
chrono = "0.4.22"
serde-aux = "4.0.0"

# common for bins
xal = { path = "../xal", optional = true }

# webrtc-rs client
webrtc = { version = "0.5.1", optional = true }
lazy_static = { version = "1.4", optional = true }
anyhow = { version = "1.0", optional = true }

# gstreamer client
gstreamer-webrtc = { version = "0.19.0", optional = true }

[dev-dependencies]
xal = { path = "../xal"}

[features]
webrtc-rs = ["dep:webrtc", "dep:lazy_static", "dep:anyhow"]
gstreamer = ["dep:gstreamer-webrtc"]
xal = ["dep:xal"]

[[example]]
name = "gssv-api"

[[bin]]
name = "client-webrtc"
required-features = ["xal", "webrtc-rs"]

[[bin]]
name = "client-gstreamer"
required-features = ["xal", "gstreamer"]
