[package]
name = "pcap_parser"
version = "0.1.0"
authors = ["tuxuser <462620+tuxuser@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gamestreaming = { path = "../gamestreaming" }
pcap = "0.8.1"
structopt = "0.3.21"
