[package]
name = "pcap_parser"
version = "0.1.0"
authors = ["tuxuser <462620+tuxuser@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gamestreaming_native = { path = "../gamestreaming_native" }
pcap = "0.11.0"
structopt = "0.3.26"
