[package]
name = "xal"
version = "0.1.0"
authors = ["tuxuser <462620+tuxuser@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
correlation_vector = { git = "https://github.com/tuxuser/CorrelationVector-Rust.git", branch = "master" }
filetime = "0.2.13"
base64 = "0.13.0"
chrono = "0.4.19"
byteorder = "1.3.4"
sha2 = "0.9.2"
hex-literal = "0.3.1"
josekit = "0.7.1"
uuid = { version = "0.8.1", features = ["v4"] }
rand = "0.7.3"
rand_core = "0.5.1"
url = "2.2.0"
ecdsa = "0.8.5"
signature = "1.2.2"
