[package]
name = "xal"
version = "0.1.0"
authors = ["tuxuser <462620+tuxuser@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.12", features = ["json"] }
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
cvlib = "0.1.2"
filetime = "0.2.17"
base64 = "0.13.0"
chrono = "0.4.22"
byteorder = "1.4.3"
sha2 = "0.10.6"
hex-literal = "0.3.4"
josekit = "0.8.1"
uuid = { version = "1.1.2", features = ["v4"] }
rand = "0.8.5"
rand_core = "0.6.4"
url = "2.3.1"
ecdsa = "0.14.8"
signature = "1.6.4"
oauth2 = "4.2.3"

# common for bins
tokio = { version = "1", features = ["full"], optional = true }

# auth_webview
tauri = { version = "1.1.1", optional = true }
wry = { version = "0.21.1", optional = true }

[features]
webview = ["dep:tauri", "dep:wry"]
tokio = ["dep:tokio"]

[[bin]]
name = "auth-cli"
required-features = ["tokio"]

[[bin]]         
name = "auth-webview"
required-features = ["webview"]
